2010-04-22  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        Add code to help debug new-run-webkit-test hangs on the Chromium bots
        https://bugs.webkit.org/show_bug.cgi?id=38011

        I can see no reasonable way to test this change.
        Stubbing out sys._current_frames() and traceback.extract_stack
        seems folly.  Dumping real data would have line number
        (and possibly other call stack) variance between runs.

        * Scripts/webkitpy/layout_tests/run_webkit_tests.py:
         - Add _dump_thread_states and _dump_thread_states_if_necessary
           to have our main thread dump the states of all threads every
           60 seconds when running in verbose mode.
         - Better document what is going on in our main loop.

2010-04-22  Sam Weinig  <sam@webkit.org>

        Reviewed by Anders Carlsson.

        Fix for https://bugs.webkit.org/show_bug.cgi?id=38002
        Add rudimentary statistics gathering for WebKit2

        * MiniBrowser/MiniBrowser.xcodeproj/project.pbxproj:
        * MiniBrowser/mac/AppDelegate.h:
        * MiniBrowser/mac/AppDelegate.m:
        (-[BrowserAppDelegate init]):
        (-[BrowserAppDelegate newWindow:]):
        (-[BrowserAppDelegate getCurrentPageNamespace]):
        (-[BrowserAppDelegate _setProcessModel:]):
        (-[BrowserAppDelegate showStatisticsWindow:]):
        (-[BrowserAppDelegate applicationWillTerminate:]):
        * MiniBrowser/mac/BrowserStatisticsWindow.xib: Added.
        * MiniBrowser/mac/BrowserStatisticsWindowController.h: Added.
        * MiniBrowser/mac/BrowserStatisticsWindowController.m: Added.
        (-[BrowserStatisticsWindowController initWithThreadedWKContextRef:processWKContextRef:]):
        (-[BrowserStatisticsWindowController dealloc]):
        (-[BrowserStatisticsWindowController windowDidLoad]):
        (-[BrowserStatisticsWindowController refreshStatistics:]):
        * MiniBrowser/mac/BrowserWindowController.h: